--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/styles.css?temp=1" />
+		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="shortcut icon" href="images/favicon.ico" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,7 +26,7 @@
 					<ul>
 						<li><a href="studio.html">Studio</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="contacts.html">Contacts</a></li>
+						<li><a href="contacts.html" class="active">Contacts</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -38,7 +38,7 @@
 
 		<main>
 			<section class="top-block">
-				<h1>Effective Solutions<br />for Your Business</h1>
+				<h1>Contacts</h1>
 				<button type="button">Order Service</button>
 			</section>
 
