--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,12 @@
 		<header>
 			<div class="logo-and-navigation">
 				<div class="logo">
-					<a href="/" title="to home"><span>Web</span>Studio</a>
+					<a href="index.html" title="to home"><span>Web</span>Studio</a>
 				</div>
 				<nav>
 					<ul>
 						<li><a href="studio.html">Studio</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="portfolio.html" class="active">Portfolio</a></li>
 						<li><a href="contacts.html">Contacts</a></li>
 					</ul>
 				</nav>
@@ -38,7 +38,7 @@
 
 		<main>
 			<section class="top-block">
-				<h1>Effective Solutions<br />for Your Business</h1>
+				<h1>Portfolio</h1>
 				<button type="button">Order Service</button>
 			</section>
 
