--- a/studio.html
+++ b/studio.html
@@ -20,7 +20,7 @@
 		<header>
 			<div class="logo-and-navigation">
 				<div class="logo">
-					<a href="" title="to home"><span>Web</span>Studio</a>
+					<a href="index.html" title="to home"><span>Web</span>Studio</a>
 				</div>
 				<nav>
 					<ul>
