--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/styles.css?temp=1" />
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="stylesheet" href="./css/styles.css?temp=1" />
+		<link rel="shortcut icon" href="./images/favicon.ico" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -68,139 +68,162 @@
 
 			<section class="project-cards block-centered">
 				<ul>
-					<li class="project-card" data-filter="app">
-						<a>
-							<div class="image-text-wrapper">
-								<img src="images/card-1.jpg" alt="App screenshots" />
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2>Banking App Interface Concept</h2>
-							<p>App</p>
-						</a>
-					</li>
-					<li class="project-card" data-filter="marketing">
-						<a>
-							<div class="image-text-wrapper back-side">
-								<img src="images/card-2.jpg" alt="Marketing" />
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2>Cashless Payment</h2>
-							<p>Marketing</p>
-						</a>
-					</li>
-					<li class="project-card" data-filter="app">
-						<a>
-							<div class="image-text-wrapper">
-								<img src="images/card-3.jpg" alt="Laptop and smartphone" />
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2>Meditation App</h2>
-							<p>App</p>
-						</a>
-					</li>
-					<li class="project-card" data-filter="marketing">
-						<a>
-							<div class="image-text-wrapper">
-								<img src="images/card-4.jpg" alt="Human driving in a car" />
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2>Taxi Service</h2>
-							<p>Marketing</p>
-						</a>
-					</li>
-					<li class="project-card" data-filter="design">
-						<a>
-							<div class="image-text-wrapper">
+					<li class="card" data-filter="app">
+						<a class="inner">
+							<div class="wrapper">
 								<img
+									class="front"
+									src="images/card-1.jpg"
+									alt="App screenshots"
+								/>
+								<p class="back">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
+							<h2 class="title">Banking App Interface Concept</h2>
+							<p class="type">App</p>
+						</a>
+					</li>
+					<li class="card" data-filter="marketing">
+						<a class="inner">
+							<div class="wrapper fliped">
+								<img class="front" src="images/card-2.jpg" alt="Marketing" />
+								<p class="back">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
+							<h2 class="title">Cashless Payment</h2>
+							<p class="type">Marketing</p>
+						</a>
+					</li>
+					<li class="card" data-filter="app">
+						<a class="inner">
+							<div class="wrapper">
+								<img
+									class="front"
+									src="images/card-3.jpg"
+									alt="Laptop and smartphone"
+								/>
+								<p class="back">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
+							<h2 class="title">Meditation App</h2>
+							<p class="type">App</p>
+						</a>
+					</li>
+					<li class="card" data-filter="marketing">
+						<a class="inner">
+							<div class="wrapper">
+								<img
+									class="front"
+									src="images/card-4.jpg"
+									alt="Human driving in a car"
+								/>
+								<p class="back">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
+							<h2 class="title">Taxi Service</h2>
+							<p class="type">Marketing</p>
+						</a>
+					</li>
+					<li class="card" data-filter="design">
+						<a class="inner">
+							<div class="wrapper">
+								<img
+									class="front"
 									src="images/card-5.jpg"
 									alt="Smartphone with app screenshots"
 								/>
-								<p>
+								<p class="back">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
 									· Cloud Storage App
 								</p>
 							</div>
-							<h2>Screen Illustrations</h2>
-							<p>Design</p>
+							<h2 class="title">Screen Illustrations</h2>
+							<p class="type">Design</p>
 						</a>
 					</li>
-					<li class="project-card" data-filter="marketing">
-						<a>
-							<div class="image-text-wrapper">
+					<li class="card" data-filter="marketing">
+						<a class="inner">
+							<div class="wrapper">
 								<img
+									class="front"
 									src="images/card-6.jpg"
 									alt="Women with smartphone in a hand"
 								/>
-								<p>
+								<p class="back">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
 									· Cloud Storage App
 								</p>
 							</div>
-							<h2>Online Courses</h2>
-							<p>Marketing</p>
+							<h2 class="title">Online Courses</h2>
+							<p class="type">Marketing</p>
 						</a>
 					</li>
-					<li class="project-card" data-filter="design">
-						<a>
-							<div class="image-text-wrapper">
-								<img src="images/card-7.jpg" alt="App screen design" />
-								<p>
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2>Instagram Stories Concept</h2>
-							<p>Design</p>
-						</a>
-					</li>
-					<li class="project-card" data-filter="website">
-						<a>
-							<div class="image-text-wrapper">
+					<li class="card" data-filter="design">
+						<a class="inner">
+							<div class="wrapper">
 								<img
+									class="front"
+									src="images/card-7.jpg"
+									alt="App screen design"
+								/>
+								<p class="back">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
+							<h2 class="title">Instagram Stories Concept</h2>
+							<p class="type">Design</p>
+						</a>
+					</li>
+					<li class="card" data-filter="website">
+						<a class="inner">
+							<div class="wrapper">
+								<img
+									class="front"
 									src="images/card-8.jpg"
 									alt="Human walking with organic food in a bag"
 								/>
-								<p>
+								<p class="back">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
 									· Cloud Storage App
 								</p>
 							</div>
-							<h2>Organic Food</h2>
-							<p>Web Site</p>
+							<h2 class="title">Organic Food</h2>
+							<p class="type">Web Site</p>
 						</a>
 					</li>
-					<li class="project-card" data-filter="website">
-						<a>
-							<div class="image-text-wrapper">
-								<img src="images/card-9.jpg" alt="Human makes coffe" />
-								<p>
+					<li class="card" data-filter="website">
+						<a class="inner">
+							<div class="wrapper">
+								<img
+									class="front"
+									src="images/card-9.jpg"
+									alt="Human makes coffe"
+								/>
+								<p class="back">
 									14 Stylish and User-Friendly App Design Concepts · Task
 									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
 									· Cloud Storage App
 								</p>
 							</div>
-							<h2>Fresh Coffee</h2>
-							<p>Web Site</p>
+							<h2 class="title">Fresh Coffee</h2>
+							<p class="type">Web Site</p>
 						</a>
 					</li>
 				</ul>
