--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/styles.css?temp=1" />
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="stylesheet" href="./css/styles.css?temp=1" />
+		<link rel="shortcut icon" href="./images/favicon.ico" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,31 +42,31 @@
 				<button type="button">Order Service</button>
 			</section>
 
-			<section class="block-centered features">
+			<section class="features block-centered">
 				<ul>
 					<li>
-						<h3>Strategy</h3>
+						<h3 class="title">Strategy</h3>
 						<p>
 							Our goal is to identify the business problem to walk away with the
 							perfect and creative solution.
 						</p>
 					</li>
 					<li>
-						<h3>Punctuality</h3>
+						<h3 class="title">Punctuality</h3>
 						<p>
 							Bring the key message to the brand's audience for the best price
 							within the shortest possible time.
 						</p>
 					</li>
 					<li>
-						<h3>Diligence</h3>
+						<h3 class="title">Diligence</h3>
 						<p>
 							Research and confirm brands that present the strongest digital
 							growth opportunities and minimize risk.
 						</p>
 					</li>
 					<li>
-						<h3>Technologies</h3>
+						<h3 class="title">Technologies</h3>
 						<p>
 							Design practice focused on digital experiences. We bring forth a
 							deep passion for problem-solving.
@@ -76,8 +76,8 @@
 			</section>
 
 			<!-- What are we doing -->
-			<section class="block-centered what-are-we-doing">
-				<h2>What are we doing</h2>
+			<section class="what-are-we-doing block-centered">
+				<h2 class="title">What are we doing</h2>
 
 				<ul>
 					<li>
@@ -107,7 +107,7 @@
 			<!-- Our team -->
 			<section class="our-team">
 				<div class="block-centered">
-					<h2>Our Team</h2>
+					<h2 class="title">Our Team</h2>
 
 					<ul class="our-team">
 						<li>
